--- a/views/personality.erb
+++ b/views/personality.erb
@@ -1,3 +1,32 @@
-<img width="350px" src="<%= @personality %>.jpg">
-<h1>You are <%= (@personality == "Artisan" || @personality == "Idealist" ? "an " : "a ") + @personality %></h1>
-<p><%= $p_types[@personality.to_sym][2] %></p>
+<style>
+  #main_pic {
+    display: inline;
+    margin-right:30px;
+    width: 300px;
+    border-radius: 15px;
+    box-shadow: 5px 5px 3px #888888;
+  }
+
+  #main_div {
+    padding:30px 30px 0 30px;
+  }
+
+  #main_text {
+    margin: 30px 30px 30px 30px;
+  }
+
+  #main_title {
+    font-family:sans-serif;
+    display: inline-block;
+    margin: 10px 0 0 0px;
+  }
+</style>
+
+<div id="main_div">
+  <img id="main_pic" src="<%= @personality %>.jpg">
+  <h1 id="main_title">You are <%= (@personality == "Artisan" || @personality == "Idealist" ? "an " : "a ") + @personality %></h1>
+</div>
+<hr>
+<div>
+  <p id="main_text"><%= $p_types[@personality.to_sym][2] %></p>
+</div>
